# Ignis

./: .gitignore  CMakeLists.txt  README.md
src/: Engine.cpp  EntityManager.cpp  main.cpp
src/include/: Engine.h  EntityManager.h
